--- a/viiilo/zajecia/25-26/jk1/index.html
+++ b/viiilo/zajecia/25-26/jk1/index.html
@@ -37,60 +37,130 @@
 				<td class="schedule-lecture"><a href="viiilo/zajecia/25-26/jk1/zajecia/0">Język koreański (한국어)</a></td>
 			</tr>
 			<tr>
-				<th scope="row">4</th>
+				<th scope="row">2</th>
 				<td>2025년 10월 9일</td>
 				<td class="schedule-lecture" colspan="2" rowspan="6"><a href="viiilo/zajecia/25-26/jk1/zajecia/1">0과. 한글을 배워요</a></td>
 			</tr>
 			<tr>
-				<th scope="row">5</th>
+				<th scope="row">3</th>
 				<td>2025년 10월 16일</td>
 			</tr>
 			<tr>
-				<th scope="row">6</th>
+				<th scope="row">4</th>
 				<td>2025년 10월 23일</td>
 			</tr>
 			<tr>
-				<th scope="row">7</th>
+				<th scope="row">5</th>
 				<td>2025년 10월 30일</td>
 			</tr>
 			<tr>
-				<th scope="row">8</th>
+				<th scope="row">6</th>
 				<td>2025년 11월 6일</td>
 			</tr>
 			<tr>
-				<th scope="row">9</th>
+				<th scope="row">7</th>
 				<td>2025년 11월 20일</td>
 			</tr>
 			<tr>
-				<th scope="row">10</th>
+				<th scope="row">8</th>
 				<td>2025년 12월 4일</td>
 				<td class="schedule-lecture" colspan="2">발음 연습</td>
 			</tr>
 			<tr>
-				<th scope="row">11</th>
+				<th scope="row">9</th>
 				<td>2025년 12월 11일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="4"><a href="viiilo/zajecia/25-26/jk1/zajecia/2">1과. 안녕하세요? 저는 안나예요</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="5"><a href="viiilo/zajecia/25-26/jk1/zajecia/2">1과. 안녕하세요? 저는 안나예요</a></td>
 			</tr>
 			<tr>
-				<th scope="row">12</th>
+				<th scope="row">10</th>
 				<td>2025년 12월 18일</td>
 			</tr>
 			<tr>
-				<th scope="row">13</th>
+				<th scope="row">11</th>
 				<td>2026년 1월 8일</td>
 			</tr>
 			<tr>
-				<th scope="row">14</th>
+				<th scope="row">12</th>
 				<td>2026년 1월 15일</td>
 			</tr>
 			<tr>
-				<th scope="row">15</th>
+				<th scope="row">13</th>
 				<td>2026년 1월 22일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"></td>
+			</tr>
+			<tr>
+				<th scope="row">14</th>
+				<td>2026년 1월 29일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk1/zajecia/3">2과. 전화번호가 뭐예요?</a></td>
+			</tr>
+			<tr>
+				<th scope="row">15</th>
+				<td>2026년 2월 19일</td>
+				
 			</tr>
 			<tr>
 				<th scope="row">16</th>
-				<td>2026년 1월 29일</td>
+				<td>2026년 2월 26일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="16"></td>
+			</tr>
+			<tr>
+				<th scope="row">17</th>
+				<td>2026년 3월 5일</td>
+			</tr>
+			<tr>
+				<th scope="row">18</th>
+				<td>2026년 3월 12일</td>
+			</tr>
+			<tr>
+				<th scope="row">19</th>
+				<td>2026년 3월 19일</td>
+			</tr>
+			<tr>
+				<th scope="row">20</th>
+				<td>2026년 3월 26일</td>
+			</tr>
+			<tr>
+				<th scope="row">21</th>
+				<td>2026년 4월 9일</td>
+			</tr>
+			<tr>
+				<th scope="row">22</th>
+				<td>2026년 4월 16일</td>
+			</tr>
+			<tr>
+				<th scope="row">23</th>
+				<td>2026년 4월 23일</td>
+			</tr>
+			<tr>
+				<th scope="row">24</th>
+				<td>2026년 4월 30일</td>
+			</tr>
+			<tr>
+				<th scope="row">25</th>
+				<td>2026년 5월 7일</td>
+			</tr>
+			<tr>
+				<th scope="row">26</th>
+				<td>2026년 5월 14일</td>
+			</tr>
+			<tr>
+				<th scope="row">27</th>
+				<td>2026년 5월 21일</td>
+			</tr>
+			<tr>
+				<th scope="row">28</th>
+				<td>2026년 5월 28일</td>
+			</tr>
+			<tr>
+				<th scope="row">29</th>
+				<td>2026년 6월 11일</td>
+			</tr>
+			<tr>
+				<th scope="row">30</th>
+				<td>2026년 6월 18일</td>
+			</tr>
+			<tr>
+				<th scope="row">31</th>
+				<td>2026년 6월 25일</td>
 			</tr>
 		</tbody>
 	</table>
