--- a/viiilo/zajecia/25-26/jk3/index.html
+++ b/viiilo/zajecia/25-26/jk3/index.html
@@ -95,39 +95,34 @@
 			</tr>
 			<tr>
 				<th scope="row">14</th>
-				<td>2026년 1월 22일</td>
+				<td>2026년 1월 29일</td>
 			</tr>
 			<tr>
 				<th scope="row">15</th>
-				<td>2026년 1월 29일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><!-- a href="viiilo/zajecia/25-26/jk3/zajecia/7"--><!--/a--></td>
+				<td>2026년 2월 19일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="2"><a href="viiilo/zajecia/25-26/jk3/zajecia/7">6. 커피를 마시면서 음악을 들어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">16</th>
-				<td>2026년 2월 19일</td>
+				<td>2026년 2월 26일</td>
 			</tr>
 			<tr>
 				<th scope="row">17</th>
-				<td>2026년 2월 26일</td>
+				<td>2026년 3월 5일</td>
 				<td class="schedule-lecture" colspan="2" rowspan="2"><!-- a href="viiilo/zajecia/25-26/jk3/zajecia/7"--><!--/a--></td>
 			</tr>
 			<tr>
 				<th scope="row">18</th>
-				<td>2026년 3월 5일</td>
+				<td>2026년 3월 12일</td>
 			</tr>
 			<tr>
 				<th scope="row">19</th>
-				<td>2026년 3월 12일</td>
+				<td>2026년 3월 19일</td>
 				<td class="schedule-lecture" colspan="2" rowspan="2"><!-- a href="viiilo/zajecia/25-26/jk3/zajecia/7"--><!--/a--></td>
 			</tr>
 			<tr>
 				<th scope="row">20</th>
-				<td>2026년 3월 19일</td>
-			</tr>
-			<tr>
-				<th scope="row">21</th>
 				<td>2026년 3월 26일</td>
-				<td class="schedule-lecture" colspan="2" rowspan="2"><!-- a href="viiilo/zajecia/25-26/jk3/zajecia/7"--><!--/a--></td>
 			</tr>
 		</tbody>
 </body></html>
