--- a/viiilo/zajecia/25-26/jk2/index.html
+++ b/viiilo/zajecia/25-26/jk2/index.html
@@ -86,11 +86,87 @@
 				<th scope="row">12</th>
 				<td>2026년 1월 21일</td>
 			</tr>
-			</tr>
 			<tr>
 				<th scope="row">13</th>
 				<td>2026년 1월 28일</td>
-				<td class="schedule-lecture" colspan="2"><a href="viiilo/zajecia/25-26/jk2/zajecia/5">1. 무슨 음식을 좋아해요?</a></td>
+				<td class="schedule-lecture" colspan="2" rowspan="3"><a href="viiilo/zajecia/25-26/jk2/zajecia/5">1. 무슨 음식을 좋아해요?</a></td>
+			</tr>
+			<tr>
+				<th scope="row">14</th>
+				<td>2026년 2월 18일</td>
+			</tr>
+			<tr>
+				<th scope="row">15</th>
+				<td>2026년 2월 25일</td>
+			</tr>
+			<tr>
+				<th scope="row">16</th>
+				<td>2026년 3월 4일</td>
+				<td class="schedule-lecture" colspan="2" rowspan="17"></td>
+			</tr>
+			<tr>
+				<th scope="row">17</th>
+				<td>2026년 3월 11일</td>
+			</tr>
+			<tr>
+				<th scope="row">18</th>
+				<td>2026년 3월 18일</td>
+			</tr>
+			<tr>
+				<th scope="row">19</th>
+				<td>2026년 3월 25일</td>
+			</tr>
+			<tr>
+				<th scope="row">20</th>
+				<td>2026년 4월 1일</td>
+			</tr>
+			<tr>
+				<th scope="row">21</th>
+				<td>2026년 4월 8일</td>
+			</tr>
+			<tr>
+				<th scope="row">22</th>
+				<td>2026년 4월 15일</td>
+			</tr>
+			<tr>
+				<th scope="row">23</th>
+				<td>2026년 4월 22일</td>
+			</tr>
+			<tr>
+				<th scope="row">24</th>
+				<td>2026년 4월 29일</td>
+			</tr>
+			<tr>
+				<th scope="row">25</th>
+				<td>2026년 5월 6일</td>
+			</tr>
+			<tr>
+				<th scope="row">26</th>
+				<td>2026년 5월 13일</td>
+			</tr>
+			<tr>
+				<th scope="row">27</th>
+				<td>2026년 5월 20일</td>
+			</tr>
+			<tr>
+				<th scope="row">28</th>
+				<td>2026년 5월 27일</td>
+			</tr>
+			<tr>
+				<th scope="row">29</th>
+				<td>2026년 6월 3일</td>
+			</tr>
+			<tr>
+				<th scope="row">30</th>
+				<td>2026년 6월 10일</td>
+			</tr>
+			<tr>
+				<th scope="row">31</th>
+				<td>2026년 6월 17일</td>
+			</tr>
+			<tr>
+				<th scope="row">32</th>
+				<td>2026년 6월 24일</td>
 			</tr>
 		</tbody>
 	</table>
