--- a/uj/zajecia/24-25l/mkmb/class/3/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/3/index.html
@@ -15,9 +15,9 @@
 
 <h2>aging society - “40대 차장이 부서 막내” “위로금 3억 줄테니 나가라”…늙어가는 대기업 특단 조치 꺼낸다</h2>
 
-<!-- <div class="youtube"> -->
-	<!-- <object data="https://youtube.com/embed/hZJPxMpwRc0" type="text/html">"20대 줄고 50대 늘었다"…대기업 '고령화 추세' 뚜렷 / SBS</object> -->
-<!-- </div> -->
+<div class="youtube">
+	<object data="https://youtube.com/embed/hZJPxMpwRc0" type="text/html">"20대 줄고 50대 늘었다"…대기업 '고령화 추세' 뚜렷 / SBS</object>
+</div>
 
 <ul class="gallery">
 	<li><a href="uj/zajecia/24-25l/mkmb/class/3/img/드라마미생한장면.png"><img src="uj/zajecia/24-25l/mkmb/class/3/img/드라마미생한장면.png" alt="드라마 미생 한 장면"></a></li>
