--- a/uj/zajecia/24-25l/mkmb/index.html
+++ b/uj/zajecia/24-25l/mkmb/index.html
@@ -116,8 +116,8 @@
 			<tr>
 				<th scope="row">3</th>
 				<td>12 March 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">aging society</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/mkmb/class/3">“40대 차장이 부서 막내” “위로금 3억 줄테니 나가라”</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
