--- a/uj/zajecia/25-26z/klc3/index.html
+++ b/uj/zajecia/25-26z/klc3/index.html
@@ -102,25 +102,25 @@
 				<th scope="row" rowspan="2">5</th>
 				<td rowspan="2">2025년 11월 7일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">병원 증상 설명하기</td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">어감: 말의 느낌</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">6</th>
-				<td rowspan="2">2025년 11월 14일</td>
+				<td rowspan="2">2025년 11월 21일</td>
 				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2"><a href="uj/zajecia/25-26z/klc3/lectures/speaking/1">1과. 성격이 참 좋아 보여요</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
+				<td class="schedule-lecture" colspan="2">시간 표현; 부정 표현</td>
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">7</th>
-				<td rowspan="2">2025년 11월 21일</td>
+				<td rowspan="2">2025년 11월 28일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
@@ -130,7 +130,7 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">8</th>
-				<td rowspan="2">2025년 11월 28일</td>
+				<td rowspan="2">2025년 12월 5일</td>
 				<td class="schedule-exam">말하기 중간고사</td>
 				<td class="schedule-exam" colspan="2"></td>
 			</tr>
@@ -140,16 +140,6 @@
 			</tr>
 			<tr>
 				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">2025년 12월 5일</td>
-				<td class="schedule-lecture">말하기</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<td class="schedule-lecture">문법</td>
-				<td class="schedule-lecture" colspan="2"></td>
-			</tr>
-			<tr>
-				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">2025년 12월 12일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
@@ -159,7 +149,7 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">11</th>
+				<th scope="row" rowspan="2">10</th>
 				<td rowspan="2">2025년 12월 19일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
@@ -169,7 +159,7 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">12</th>
+				<th scope="row" rowspan="2">11</th>
 				<td rowspan="2">2026년 1월 9일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
@@ -179,7 +169,7 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">13</th>
+				<th scope="row" rowspan="2">12</th>
 				<td rowspan="2">2026년 1월 16일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
@@ -189,7 +179,7 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">14</th>
+				<th scope="row" rowspan="2">13</th>
 				<td rowspan="2">2026년 1월 23일</td>
 				<td class="schedule-lecture">말하기</td>
 				<td class="schedule-lecture" colspan="2"></td>
@@ -199,7 +189,7 @@
 				<td class="schedule-lecture" colspan="2"></td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="2">15</th>
+				<th scope="row" rowspan="2">14</th>
 				<td rowspan="2">2026년 1월 30일</td>
 				<td class="schedule-exam">말하기 기말고사</td>
 				<td class="schedule-exam" colspan="2"></td>
