--- a/uj/zajecia/25-26z/ljk4/index.html
+++ b/uj/zajecia/25-26z/ljk4/index.html
@@ -115,7 +115,7 @@
 				<th scope="row" rowspan="4">6</th>
 				<td rowspan="4">2025년 11월 19일</td>
 				<td class="schedule-exam">읽기</td>
-				<td class="schedule-exam">시험 1</td>
+				<td class="schedule-exam"><a href="uj/zajecia/25-26z/ljk4/testy/czytanie/1">시험 1</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">읽기</td>
