--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -49,8 +49,8 @@
 		<tbody>
 			<tr>
 				<th scope="row">2</th>
-				<td>? października 2024</td>
-				<td class="schedule-lecture"></td>
+				<td>22 października 2024</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk2/zajecia/2">1과 음식, 2과 취미</a></td>
 			</tr>
 		</tbody>
 		<tbody>
