--- a/uj/index.html
+++ b/uj/index.html
@@ -19,12 +19,21 @@
 	Uniwersytet Jagielloński w Krakowie<br>
 	<hr>
 	kontakt: <a href="mailto:tomasz1.wilczynski@uj.edu.pl">tomasz1.wilczynski@uj.edu.pl</a><br>
-	konsultacje: poniedziałek 10.30–11.30, pokój -1.15<br>
+	środa: wtorek 15.00–16.00, pokój -1.15<br>
 </address>
 
 <h2>Zajęcia</h2>
 
-<h3>Semestr zimowy 2024/2025</h3>
+<h3>Semestr letni 2024/2025</h3>
+
+<ul>
+	<li><!--a href="uj/zajecia/24-25l/klc2"!-->Korean Language Class (2)</a></li>
+	<li><a href="uj/zajecia/24-25l/ljk5">Lektorat języka koreańskiego - poziom 5</a></li>
+	<li><!--a href="uj/zajecia/24-25l/mkmb"-->Modern Korean in Media and Business (3)<!--/a--></li>
+</ul>
+
+<details>
+<summary class="h3">Semestr zimowy 2024/2025</summary>
 
 <ul>
 	<li><a href="uj/zajecia/24-25z/assk">Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</a></li>
@@ -34,6 +43,7 @@
 	<li><a href="uj/zajecia/24-25z/wats3-1">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</a></li>
 	<li><a href="uj/zajecia/24-25z/wats3-2">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</a></li>
 </ul>
+</details>
 
 <details>
 <summary class="h3">Semestr letni 2023/2024</summary>
