--- a/viiilo/zajecia/24-25z/jk2/zajecia/4/index.html
+++ b/viiilo/zajecia/24-25z/jk2/zajecia/4/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" media="print" href="viiilo/css/print.css">
 </head><body class="home">
 
-<h1>Język koreański - poziom zaawansowany<br><br>03. 백화점에서 쇼핑할 거예요</h1>
+<h1>Język koreański - poziom zaawansowany<br><br>04. 더 큰 사이즈는 없어요</h1>
 
 <h2>Podręcznik</h2>
 
