--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -239,8 +239,8 @@
 				<td>7 maja 2025</td>
 			</tr>
 			<tr>
-				<th scope="row" rowspan="6">8</th>
-				<td rowspan="6">14 maja 2025</td>
+				<th scope="row" rowspan="5">8</th>
+				<td rowspan="5">14 maja 2025</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
 				<td class="schedule-presentation">Karolina Tkacz - webtoony</td>
 				<td class="schedule-presentation"></td>
@@ -265,11 +265,9 @@
 				<td class="schedule-presentation">Anna Kawałek - książka kryminalna</td>
 				<td class="schedule-presentation"></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row" rowspan="2">9</th>
-				<td rowspan="2">21 maja 2025</td>
+				<td rowspan="2">28 maja 2025</td>
 				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2"-->Kolokwium 2<!--/a--></td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
@@ -281,7 +279,7 @@
 			</tr>
 			<tr>
 				<th scope="row">10</th>
-				<td>28 maja 2025</td>
+				<td>21 maja 2025</td>
 				<td class="schedule-lecture"></td>
 				<td class="schedule-lecture"></td>
 			</tr>
@@ -354,12 +352,12 @@
 			<tr>
 				<th scope="row">2</th>
 				<td>24 kwietnia 2025</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">konferencja Korean Culture, History and Politics</td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
 				<td>8 maja 2025</td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/znaki/2">分 나눌 분</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
