--- a/viiilo/zajecia/24-25z/jk1/index.html
+++ b/viiilo/zajecia/24-25z/jk1/index.html
@@ -59,8 +59,8 @@
 			<tr>
 				<th scope="row">4</th>
 				<td>14 listopada 2024</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">Lekcja 4</td>
+				<td class="schedule-lecture"><a href="viiilo/zajecia/24-25z/jk1/zajecia/4">Alfabet (한글) - tworzenie wyrazów</a></td>
 			</tr>
 		</tbody>
 		<tbody>
