--- a/viiilo/zajecia/24-25z/jk2/index.html
+++ b/viiilo/zajecia/24-25z/jk2/index.html
@@ -63,7 +63,7 @@
 				<th scope="row">4</th>
 				<td>15 listopada 2024</td>
 				<td class="schedule-lecture">Lekcja 4</td>
-				<td class="schedule-lecture" rowspan="2">03. 백화점에서 쇼핑할 거예요</td>
+				<td class="schedule-lecture" rowspan="2"><a href="viiilo/zajecia/24-25z/jk2/zajecia/3">03. 백화점에서 쇼핑할 거예요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
