--- a/uj/zajecia/24-25z/itas/zajecia/1/index.html
+++ b/uj/zajecia/24-25z/itas/zajecia/1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8">
-	<base href="file://C:/Users/TW86/Desktop/Pulpit/Praca/Uniwersytet%20Jagielloński/WWW/uj/">
+	<base href="https://twilczynski.com/">
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1">
 	<meta name="robots" content="none">
 	<link rel="icon" href="data:,">
