--- a/uj/zajecia/24-25l/klc2/index.html
+++ b/uj/zajecia/24-25l/klc2/index.html
@@ -33,7 +33,7 @@
 		<li>bonus for promoting Korean culture: ?</li>
 	</ul>
 
-	<p>Two unwarranted absences do not affect the final score. Each subsequent absence results in the attendance score being reduced by 10%, i.e. from 20% to 10%, and from 10% to 0%.<strong>In order to pass the course, the student must attend at least 9 lectures and take the midterm and final examinations.</strong></p>
+	<p>Two unwarranted absences do not affect the final score. Each subsequent absence results in the attendance score being reduced by 10%, i.e. from 20% to 10%, and from 10% to 0%. <strong>In order to pass the course, the student must attend at least 9 lectures and take the midterm and final examinations.</strong></p>
 </details>
 
 <details>
@@ -76,12 +76,12 @@
 				<th scope="row">1</th>
 				<td>3월 7일</td>
 				<td class="schedule-lecture" rowspan="5">수업</td>
-				<td class="schedule-lecture">세종한국어 회화 2 제6과</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/klc2/class/6">6과. 푹 쉬어서 괜찮아졌어요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
 				<td>4월 11일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제7과</td>
+				<td class="schedule-lecture" rowspan="2"><a href="uj/zajecia/24-25l/klc2/class/7">7과. 일곱 시로 예약해 주세요</a></td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
@@ -90,7 +90,7 @@
 			<tr>
 				<th scope="row">8</th>
 				<td>5월 9일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제8과</td>
+				<td class="schedule-lecture" rowspan="2">8과. 부산에 가 봤어요?</td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
@@ -104,7 +104,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="4">수업</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제9과</td>
+				<td class="schedule-lecture" rowspan="2">9과. 이번 축제 때 꼭 오세요</td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
@@ -113,7 +113,7 @@
 			<tr>
 				<th scope="row">12</th>
 				<td>6월 6일</td>
-				<td class="schedule-lecture" rowspan="2">세종한국어 회화 2 제10과</td>
+				<td class="schedule-lecture" rowspan="2">10과. 취미가 같은 사람을 만나고 싶었어요</td>
 			</tr>
 			<tr>
 				<th scope="row">13</th>
